Swapped over all the buttons to the new style, fixed star ratings and some other small fixes
Updated all the buttons. Tiny fix in the cart (removed space between £ and price). Made focus states for product pack sizes. Few other small visual fixes. Figured out why the ratings were not showing up, fixed it and edited their colour. Doesn't currently pull from backend.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -139,7 +139,7 @@ Shop Styling
 }
 
 .overlay:hover {
-  background:rgba(255, 126, 244, 0.6);
+  background:#ffdad5af;
 }
 
 .overlay-content {
@@ -250,7 +250,7 @@ Contact Page Styling
 /*Styling for submit button*/
 .form-submit {
   margin-top: 30px;
-  border: 2px solid black;
+  border: 1px solid grey;
   font-size: larger;
 }
 
@@ -446,8 +446,8 @@ Stockist Styling
 }
 
 .stock-btn {
-  font-size: x-large;
-  width: 200px;
+  font-size: large;
+
 }
 
 @keyframes example {
@@ -460,11 +460,10 @@ Stockist Styling
   animation: example 1s;
 }
 
-/* Custom Button Animation Test ---- Adapted from: Yuhomyan. n.d. "Black&White Button." Codepen. Accessed August 9, 2021. https://codepen.io/yuhomyan/pen/LYNVVNO.*/
+/* Custom Button Animation ---- Adapted from: Yuhomyan. n.d. "Black&White Button." Codepen. Accessed August 9, 2021. https://codepen.io/yuhomyan/pen/LYNVVNO.*/
 
-.btn-bigger {
-  padding-left: 10px !important;
-  padding-right: 10px !important;
+.btn-3:focus {
+  border: 2px solid #e4690c;
 }
 
 .custom-btn {
@@ -498,16 +497,20 @@ Stockist Styling
   line-height: 39px;
   padding: 0;
 }
-.btn-3:hover{
+
+.btn-3:hover {
   background-color: white;
   color: #e4690c;
 }
+
+
 .btn-3 span {
   position: absolute;
   display: block;
   width: 100%;
   height: 100%;
 }
+
 .btn-3:before,
 .btn-3:after {
   position: absolute;
@@ -517,20 +520,25 @@ Stockist Styling
   background: #e4690c;
   transition: all 0.3s ease;
 }
+
 .btn-3:before {
   height: 0%;
   width: 2px;
 }
+
 .btn-3:after {
   width: 0%;
   height: 2px;
 }
+
 .btn-3:hover:before {
   height: 100%;
 }
+
 .btn-3:hover:after {
   width: 100%;
 }
+
 .btn-3 span:before,
 .btn-3 span:after {
   position: absolute;
@@ -540,6 +548,7 @@ Stockist Styling
   background: #e4690c;
   transition: all 0.3s ease;
 }
+
 .btn-3 span:before {
   width: 2px;
   height: 0%;
@@ -552,5 +561,186 @@ Stockist Styling
   height: 100%;
 }
 .btn-3 span:hover:after {
+  width: 100%;
+}
+
+
+/*Widest Button*/
+
+.custom-btn-widest {
+  width: 100%;
+  height: 40px;
+  padding: 10px 25px;
+  border: 1px solid grey;
+  font-weight: 500;
+  background-color: white;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+}
+
+.custom-btn-widest:hover {
+  border: #e4690c;
+  text-decoration: none; 
+}
+
+.custom-btn-widest span {
+  color: #000;
+}
+
+.custom-btn-widest span:hover {
+  text-decoration: none;
+  color: #e4690c;
+}
+
+.btn-5 {
+  line-height: 39px;
+  padding: 0;
+}
+.btn-5:hover{
+  background-color: white;
+  color: #e4690c;
+}
+.btn-5 span {
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.btn-5:before,
+.btn-5:after {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 0;
+  background: #e4690c;
+  transition: all 0.3s ease;
+}
+.btn-5:before {
+  height: 0%;
+  width: 2px;
+}
+.btn-5:after {
+  width: 0%;
+  height: 2px;
+}
+.btn-5:hover:before {
+  height: 100%;
+}
+.btn-5:hover:after {
+  width: 100%;
+}
+.btn-5 span:before,
+.btn-5 span:after {
+  position: absolute;
+  content: "";
+  right: 0;
+  bottom: 0;
+  background: #e4690c;
+  transition: all 0.3s ease;
+}
+.btn-5 span:before {
+  width: 2px;
+  height: 0%;
+}
+.btn-5 span:after {
+  width: 0%;
+  height: 2px;
+}
+.btn-5 span:hover:before {
+  height: 100%;
+}
+.btn-5 span:hover:after {
+  width: 100%;
+}
+
+/* Wide button */
+
+.custom-btn-wide {
+  width: 140px;
+  height: 40px;
+  padding: 10px 25px;
+  border: 1px solid grey;
+  font-weight: 500;
+  background-color: white;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+}
+
+.custom-btn-wide:hover {
+  border: #e4690c;
+  text-decoration: none; 
+}
+
+.custom-btn-wide span {
+  color: #000;
+}
+
+.custom-btn-wide span:hover {
+  text-decoration: none;
+  color: #e4690c;
+}
+
+.btn-4 {
+  line-height: 39px;
+  padding: 0;
+}
+.btn-4:hover{
+  background-color: white;
+  color: #e4690c;
+}
+.btn-4 span {
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.btn-4:before,
+.btn-4:after {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 0;
+  background: #e4690c;
+  transition: all 0.3s ease;
+}
+.btn-4:before {
+  height: 0%;
+  width: 2px;
+}
+.btn-4:after {
+  width: 0%;
+  height: 2px;
+}
+.btn-4:hover:before {
+  height: 100%;
+}
+.btn-4:hover:after {
+  width: 100%;
+}
+.btn-4 span:before,
+.btn-4 span:after {
+  position: absolute;
+  content: "";
+  right: 0;
+  bottom: 0;
+  background: #e4690c;
+  transition: all 0.3s ease;
+}
+.btn-4 span:before {
+  width: 2px;
+  height: 0%;
+}
+.btn-4 span:after {
+  width: 0%;
+  height: 2px;
+}
+.btn-4 span:hover:before {
+  height: 100%;
+}
+.btn-4 span:hover:after {
   width: 100%;
 }
