--- a/client/src/product.css
+++ b/client/src/product.css
@@ -35,15 +35,14 @@
 
 .productImgCarosel img {
     width: calc(20% - 1em);
-    margin-right: 1em;
-}
-
-.productDesc {
-    padding-left: 30px;
 }
 
 .productDesc h4 {
     margin-bottom: 0;
+}
+
+.productDesc {
+    padding: 20px;
 }
 
 .nutritFact {
@@ -52,18 +51,27 @@
 }
 
 .productRating {
-    margin-left: 10em;
-    margin-bottom: 1em;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    --symbol-color-active: #e4690c;
+    --symbol-spacing: 3px;
 }
 
 .productOptions {
     margin-bottom: 1em;
+    padding-bottom: 10px;
+    padding-top: 20px;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .packoption {
     margin-right: 1em;
 }
-
 
 .nutritionalTable {
     flex-direction: column;
@@ -75,6 +83,10 @@
     padding: 0;
 }
 
+.back-btn {
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
 
 /*--------Info about product---------**/
 .productFacts {
@@ -136,30 +148,37 @@
 
 /* RESPONSIVE - IPAD PRO Styling -------------------*/
 @media all and (max-width: 1024px){
-    .productRating{
-        margin-left: 8em;
-    }
+
 }
 
 /* RESPONSIVE - TABLET Styling -------------------*/
 @media all and (max-width: 768px){
-    .productRating{
-        margin-left: 5em;
-        margin-bottom: 0.5em;
+
+    .productInfo {
+        flex-direction: column;
     }
 
-    /*---------------------More Products Section-----------------*/
-    .productCard {
-        width: calc(33.33% - 1.5em);
-        margin-right: 1.5em;
+    .productImages{
+        width: 60%;
+        justify-content: center;
+        margin-right: auto;
+        margin-left: auto;
     }
 
-    .productCard h4{
-        font-size: 1.32rem;
+    .productDesc{
+        width: 80%;
+        justify-content: center;
+        margin-left: auto;
+        margin-right: auto;
     }
-    
-    .productCard img {
-        padding: 1em 1em 0;
+
+    .productOptions{
+        display: flex;
+        flex-direction:row;
+    }
+
+    .productInfo{
+        margin-bottom: 1em;
     }
 }
 
@@ -177,10 +196,6 @@
 
         .productDesc{
             width: 100%;
-        }
-
-        .productRating {
-            margin-left: 6em;
         }
 
         .productOptions{
